feat(core): store function code after creation
